# toy-query-engine

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
src/: commands.rs  data.rs  datasets.rs  main.rs  operators.rs  table.rs
tests/: cli.rs
