[package]
name = "toy-query-engine"
version = "0.1.0"
edition = "2021"
authors = ["Amogh Akshintala"]
description = "A simple CLI tool for read-only queries on a small country dataset."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1.0", features = ["derive"] }
